--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,146 @@
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.container {
+  width: 100%;
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .1)), url(../images/background.png);
+  background-size: cover;
+  background-position: center;
+  padding: 10px 8%;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
+.logo {
+  width: 180px;
+  cursor: pointer;
+}
+
+nav ul {
+  list-style: none;
+  width: 100%;
+  text-align: right;
+  padding-right: 60px;
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 10px 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: #FF1C8D;
+}
+
+
+.BTN {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  border: 0;
+  outline: 0;
+  border-radius: 5px;
+  background: #FF1C8D;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+
+.BTN:hover {
+  background: #ff1c8ec0;
+  color: #fff;
+}
+
+.BTN img {
+  width: 20px;
+  margin-right: 10px;
+}
+
+section {
+  margin-top: 14%;
+  color: #fff;
+  max-width: 620px;
+}
+
+section h1 {
+  font-size: 70px;
+  font-weight: 700;
+  line-height: 85px;
+  margin-bottom: 25px;
+}
+
+section p {
+  font-size: 18px;
+}
+
+section form {
+  display: flex;
+  align-items: center;
+  background: #fff;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 30px;
+}
+
+section form input {
+  border: 0;
+  outline: 0;
+  width: 100%;
+  font-size: 20px;
+  padding-left: 10px;
+  appearance: none;
+  color: #FF1C8D;
+}
+
+section form input::placeholder {
+  color: #ff7dbec0;
+}
+
+section form .BTN {
+  font-size: 15px;
+  padding: 10px 30px;
+}
+
+/* 
+
+
+
+section p {
+  color: #fff;
+  font-size: 32px;
+  width: 1200px;
+  margin-bottom: 20px;
+}
+
+
+form input {
+  padding: 15px;
+  border: none;
+  outline: none;
+}
+
+form label a {
+  text-decoration: none;
+  background-color: red;
+} */
